--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,12 @@
   padding: 0;
 }
 
+#root {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
 html, body {
   width: 100%;
   height: 100%;
